<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dsg_analyzer_rviz</name>
  <version>0.0.0</version>
  <description>RViz Panel for dsg Statistics</description>
  <maintainer email="multyxu@mit.edu">Multy Xu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
